# parrot

./: .tool-versions  pyproject.toml
parrot/app/: main.py
parrot/app/api/: __init__.py
parrot/app/config/: settings.py
parrot/app/core/: __init__.py
parrot/app/domain/: __init__.py
parrot/app/infrastructure/: __init__.py
parrot/app/util/: __init__.py
