[project]
name = "parrot"
version = "0.1.0"
description = ""
authors = [{ name = "Flynn", email = "wphestiraid@gmail.com" }]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.2"
mypy = "^1.15.0"

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ['py311']
preview = true
extend-exclude = ".*_pb2.*\\.py"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingImports = true
reportGeneralTypeIssues = false
exclude = [".venv", "**/*_pb2.py", "**/*_pb2_grpc.py"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "PL", # pylint
]
ignore = [
    "E501",    # line too long, handled by black
    "E711",    # Comparison to None should be cond is None
    "E712",    # Comparison to True should be cond is True or if cond:
    "B008",    # do not perform function calls in argument defaults
    "C901",    # too complex
    "PLR0913", # too many arguments to function call
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
